# rehuman

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config.example.toml
.github/workflows/: python-pypi-publish.yml  python-release-artifacts.yml
docs/: api.md  cli.md  development.md  examples.md
docs/dev/: loc-exceptions.md  loc-exceptions.toml  smoke-tests.md
examples/: basic.rs
python/: Cargo.toml  README.md  pyproject.toml
python/docs/: api.md  index.md  release.md
python/rehuman/: __init__.py  __init__.pyi
python/src/: lib.rs
python/tests/: test_rehuman.py
scripts/smoke/: cli-headless-smoke.sh
src/: generated.rs  lib.rs  sets.rs
tests/: cli_contract.rs  data_checks.rs  property_tests.proptest-regressions  property_tests.rs
