[package]
name = "rehuman"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Your Name <you@example.com>"]
license = "MIT"
description = "Unicode-safe text cleaning & typographic normalization for Rust"
repository = "https://example.com/rehuman"
keywords = ["unicode", "normalize", "cleanup", "whitespace", "quotes", "dashes", "ellipsis"]
categories = ["text-processing", "parser-implementations"]
default-run = "rehuman"

[features]
default = ["unorm"]
# Enable full Unicode normalization (NFC/NFD/NFKC/NFKD)
unorm = ["dep:unicode-normalization"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
unicode-normalization = { version = "0.1", optional = true }
phf = { version = "0.11", features = ["macros"] }
unicode-segmentation = "1.12"
icu_properties = { version = "1.5", features = ["compiled_data"] }

[build-dependencies]
phf_codegen = "0.11"
ucd-parse = "0.1"
unicode_names2 = "0.5"
icu_properties = { version = "1.5", features = ["compiled_data"] }

[dev-dependencies]
proptest = "1.5"

[[bin]]
name = "rehuman"
path = "src/bin/rehuman.rs"

[[bin]]
name = "ishuman"
path = "src/bin/ishuman.rs"

[lib]
name = "rehuman"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
