[package]
name = "rehuman"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Peter Szemraj <peterszemraj+dev@gmail.com>"]
license = "MIT"
description = "Unicode-safe text cleaning & typographic normalization for Rust"
repository = "https://github.com/pszemraj/rehuman"
homepage = "https://github.com/pszemraj/rehuman"
readme = "README.md"
documentation = "https://docs.rs/rehuman"
keywords = ["text", "unicode", "normalization", "cleaning", "llm"]
categories = ["text-processing", "command-line-utilities"]
default-run = "rehuman" # TODO: remove? if not needed
include = [
    "Cargo.toml",
    "README*",
    "LICENSE*",
    "build.rs",
    "src/**",
    "examples/**",
]

[features]
default = ["unorm", "stats"]
# Enable full Unicode normalization (NFC/NFD/NFKC/NFKD)
stats = []
security = []
unorm = ["dep:unicode-normalization"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
unicode-normalization = { version = "0.1", optional = true }
phf = { version = "0.13.1", features = ["macros"] }
unicode-segmentation = "1.12"
icu_properties = { version = "2.0.1", features = ["compiled_data"] }
serde_json = "1.0.145"
tempfile = "3.23.0"

[build-dependencies]
phf_codegen = "0.13.1"
ucd-parse = "0.1"
icu_properties = { version = "2.0.1", features = ["compiled_data"] }

[dev-dependencies]
proptest = "1.8.0"

[[bin]]
name = "rehuman"
path = "src/bin/rehuman.rs"

[[bin]]
name = "ishuman"
path = "src/bin/ishuman.rs"

[lib]
name = "rehuman"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
