[workspace]
members = [".", "python"]
default-members = ["."]
resolver = "2"

[package]
name = "rehuman"
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
authors = ["Peter Szemraj <peterszemraj+dev@gmail.com>"]
license = "MIT"
description = "Unicode-safe text cleaning & typographic normalization for Rust"
repository = "https://github.com/pszemraj/rehuman"
homepage = "https://github.com/pszemraj/rehuman"
readme = "README.md"
documentation = "https://docs.rs/rehuman"
keywords = ["text", "unicode", "normalization", "cleaning", "llm"]
categories = ["text-processing", "encoding"]
default-run = "rehuman"
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
    "build.rs",
    "config.example.toml",
    "src/**",
    "tests/**",
    "docs/**",
    "examples/**",
]

[features]
default = ["unorm", "stats"]
# Detailed per-operation statistics tracking
stats = []
# Optional hardening for bidi control stripping
security = []
# Full Unicode normalization (NFC/NFD/NFKC/NFKD)
unorm = ["dep:unicode-normalization"]

[dependencies]
# Core library surface
unicode-normalization = { version = "0.1.24", optional = true }
phf = { version = "0.13.1", features = ["macros"] }
unicode-segmentation = "1.12"
icu_properties = { version = "2.0.1", features = ["compiled_data"] }
serde = { version = "1.0.228", features = ["derive"] }
# CLI runtime (always built; crate is CLI-first)
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
toml = "0.9.8"
serde_json = "1.0.145"
tempfile = "3.23.0"

[build-dependencies]
phf_codegen = "0.13.1"
icu_properties = { version = "2.0.1", features = ["compiled_data"] }

[dev-dependencies]
proptest = "1.8.0"

[[bin]]
name = "rehuman"
path = "src/bin/rehuman.rs"

[[bin]]
name = "ishuman"
path = "src/bin/ishuman.rs"

[lib]
name = "rehuman"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
