[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "rehuman"
dynamic = ["version"]
description = "Python bindings for rehuman: Unicode-safe text cleaning & normalization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Filters",
]
keywords = ["text", "unicode", "normalization", "cleaning", "llm"]

[project.urls]
Repository = "https://github.com/pszemraj/rehuman"
Documentation = "https://docs.rs/rehuman"

[tool.maturin]
module-name = "rehuman._rehuman"
python-source = "."
exclude = ["tests/**", "docs/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
